--- a/app/views/pages/girl.html.erb
+++ b/app/views/pages/girl.html.erb
@@ -1,10 +1,5 @@
 <div class="large-12">
-  <div class="large-9">
-    
-  </div>
-  <div class="large-3">
-    
-  </div>
+<%= image_tag("girlshot.png") %>
   <div class="row">
     <h1 style="display:inline-block;">Select a URL</h1>
     <%= image_tag("arrow.png") %>
