--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,7 +11,8 @@
  *= require_self
  *= require_tree .
  */
-
+/*
+ */
 @import "foundation"; *= require foundation_and_overrides
 
 @import "foundation/navbar";
