--- a/app/assets/stylesheets/foundation/navbar.css.scss
+++ b/app/assets/stylesheets/foundation/navbar.css.scss
@@ -1,3 +1,26 @@
+.gender{ 
+  opacity:.3;
+  &.select{
+    opacity:1 !important;
+  }
+}
+
+ul.dropdown{
+  border-right: 1px solid #333;
+  border-left: 1px solid #333;
+  border-bottom: 1px solid #333;
+  box-shadow: 2px 6px 10px 0px #999;
+}
+
+.dropdown{
+  visibility:visible !important;
+}
+.top-bar-section .dropdown li a:hover{
+  background:white!important;
+}
+.top-bar-section .dropdown li .hover:hover{
+  opacity:.8 !important;
+}
 .top-bar{
   input{
     line-height: 2em;
@@ -26,4 +49,7 @@
       top: 20px !important;
     }
   }
+}
+.top-bar-section ul {
+  background: #fff !important;
 }
