--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -972,7 +972,7 @@ $topbar-bg: #fff;
 
 // Height and margin
 $topbar-height: 100px;
-// $topbar-margin-bottom: emCalc(30px);
+$topbar-margin-bottom: emCalc(0px);
 
 // Control Input height for top bar
 $topbar-input-height: 2.45em;
