--- a/app/assets/stylesheets/foundation/navbar.css.scss
+++ b/app/assets/stylesheets/foundation/navbar.css.scss
@@ -4,7 +4,11 @@
     opacity:1 !important;
   }
 }
-
+.overover{
+  position: absolute;
+  top:0px;
+  right:0px;
+}
 ul.dropdown{
   border-right: 1px solid #333;
   border-left: 1px solid #333;
