--- a/app/views/layouts/_searchholder.erb
+++ b/app/views/layouts/_searchholder.erb
@@ -56,6 +56,7 @@
               <%= image_tag("woman.png") %>
               </div>
              </div>
+             <a href="#" class="button small">Save</a>
           </li>
           <li class="divider"></li>
           <li>
