--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
   <div class="large-3">
     
   </div>
-  <div class="row">
+  <div class="row" style="padding-top:220px;">
     <h1 style="display:inline-block;">Select a URL</h1>
     <%= image_tag("arrow.png") %>
   </div>
