--- a/app/views/layouts/_searchholder.erb
+++ b/app/views/layouts/_searchholder.erb
@@ -22,7 +22,7 @@
               <input type="text" placeholder="See what others see" class="border-left-round">
             </div>
             <div class="small-4 columns">
-              <a href="#" class="secondary button border-right-round">Gogglize</a>
+              <a href="pages/boy" class="secondary button border-right-round">Gogglize</a>
             </div>
           </div>
         </form>
@@ -47,16 +47,16 @@
               </div>
              </div> 
              <div style="width:200px; " class="row">
-              <div class="large-6 column gender text-center">
+              <div class="large-6 column gender text-center select">
                 
               <%= image_tag("man.png") %>
               </div>
-              <div class="large-6 column gender text-center select">
+              <div class="large-6 column gender girl text-center ">
                 
               <%= image_tag("woman.png") %>
               </div>
              </div>
-             <a href="#" class="button small">Save</a>
+             <a href="girl" class="button small">Save</a>
           </li>
           <li class="divider"></li>
           <li>
